--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -13,5 +13,6 @@ append content
   include components/header
   include components/promo
   include components/course
+  include components/composition
 append scripts
   script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
