--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,6 +5,9 @@
 	position: relative;
 	z-index: 5;
 	border-bottom: 1px solid #eaeaea;
+	@include rm(1220) {
+			padding: 20px 0;
+	}
   &__wrapper {
     display: flex;
     justify-content: space-between;
