--- a/src/styles/settings/common.scss
+++ b/src/styles/settings/common.scss
@@ -80,7 +80,7 @@ a:hover{
   }
 
   @include rm(1220) {
-    font-size: 48px;
+    font-size: 55px;
 	}
 	&__small {
 		color: #444444;
@@ -98,7 +98,7 @@ font-size: 16px;
 	}
 }
 .accent {
-	color: #f90707;
+	color: #cd2011
 }
 .text-bold {
   font-weight: 700;
