--- a/src/templates/components/promo.pug
+++ b/src/templates/components/promo.pug
@@ -13,7 +13,7 @@ section.promo.block
 					li.promo__item.promo__item--2
 						span.promo-item__icon.promo-item__icon--2 6
 							span.promo-item__icon--small hovers 
-						p.promo-item__text.promo-item__text--2 Обеспечить эффект в первые 6 часов
+						p.promo-item__text.promo-item__text--2 Обеспечить эффект в&nbsp;первые 6 часов
 					li.promo__item.promo__item--3
 						span.promo-item__icon.promo-item__icon--3 
 							img(src="img/promo-icon3.png", alt="icon")
@@ -30,13 +30,13 @@ section.promo.block
 							h5.form__price-title Старая цена
 							p.form__price-before
 								span.x_currency.form__price-before_size руб
-								span.x_price_previous.form__price-before_line 1980
+								span.x_price_previous.form__price-before_line 1980000
 						.form_before
 						.form__price-val
 							h5.form__price-title.form__price-title--new Новая цена
 							p.form__price-after
 								span.x_currency.form__price-after_size руб
-								span.x_price_current 990
+								span.x_price_current 990000
 					form(action="/submit", method="POST", class="x_order_form form__main")
 						label.form__input--wrap
 							span.form__input--icon
