--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -12,5 +12,8 @@ append head
 append content
   include components/header
   include components/promo
+  include components/danger
+  include components/illness
+  include components/svg-sprites.html
 append scripts
-  script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
+  //- script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
