--- a/src/styles/components/form.sass
+++ b/src/styles/components/form.sass
@@ -9,6 +9,10 @@
 		+rm(1024)
 			max-width: 100%
 			position: relative
+			display: flex
+			flex-wrap: wrap
+			justify-content: space-between
+			align-items: flex-end
 	&__input
 		box-shadow: 0 4px 4px rgba(3, 3, 3, 0.05)
 		box-shadow: inset -2px 0 7px rgba(0, 0, 0, 0.04);
@@ -22,6 +26,8 @@
 		transition: 0.3s
 		color: #444
 		font-size: 16px
+		+rm(1220)
+			height: 65px
 		&--icon 
 			position: absolute
 			left: 17px
@@ -40,12 +46,32 @@
 		&--wrap 
 			margin-bottom: 15px
 			position: relative
+			+rm(1024)
+				margin-bottom: 0
+				width: 31.62%
 	&__main
 		margin-bottom: 15px
+		+rm(1024)
+			order: 3
+			max-width: 100%
+			width: 100%
+			margin-bottom: 0
 	&__lastpack
 		text-align: center
 		color: #222222;
 		font-size: 18px
+		+rm(1024)
+			order: 2
+			width: 31.62%
+			font-size: 20px
+	&__main
+		+rm(1024)
+			display: flex
+			justify-content: space-between
+			margin-top: 20px
+	&__btn
+		+rm(1024)
+			width: 31.62%
 .lastpack
 	background-color: #219ed4
 	color: #fff
@@ -63,8 +89,20 @@
 	width: 100% 
 	position: relative 
 	margin-bottom: 12px 
+	flex-direction: column
+	+rm(1024)
+		flex-direction: row
+		max-width: 400px
+		order: 1
+		margin-bottom: 0
 .form__price-val 
-	text-align: left 
+	text-align: center
+	+rm(1024)
+		text-align: left
+	&:first-child
+		margin-bottom: 10px
+		+rm(1024)
+			margin-bottom: 0
 .form__price-title 
 	font-size: 13px 
 	color: #666 
@@ -95,12 +133,13 @@
 	left: 0 
 .form__price-before_size 
 	font-size: 16px 
-.form_before 
-	display: block 
-	width: 1px 
-	margin-top: 3px 
-	height: 50px 
-	background-color: #d1d0d0 
+.form_before
+	+rm(1024)
+		display: block 
+		width: 1px 
+		margin-top: 3px 
+		height: 50px 
+		background-color: #d1d0d0 
 .form__price-after 
 	font-size: 40px 
 	color: #000 
