--- a/src/styles/components/promo.sass
+++ b/src/styles/components/promo.sass
@@ -1,23 +1,27 @@
 .promo
 	background-color: #ebfaff
 	+rm(1024)
-		margin-bottom: 300px
 		position: relative
 		position: relative
 		z-index: 0
 		background: none
-		&::after
+		padding-bottom: 0 !important
+	+rm(1220)
+		padding-top: 57px
+	&::after
+		+rm(1024)
 			content: ''
 			position: absolute
-			bottom: -1px
+			bottom: 19%
 			width: 100%
 			height: 103px
 			background: url(../img/promo-line.png)  center
 			z-index: -1
-		&::before
+	&::before
+		+rm(1024)
 			content: ''
 			position: absolute
-			height: 60%
+			height: 80%
 			width: 100%
 			background: url(../img/bg.png) no-repeat center #ebfaff;
 			left: 0
@@ -41,6 +45,7 @@
 			margin-bottom: 15px
 		+rm(1220)
 			font-size: 65px
+			margin-bottom: 6px
 	&__subtitle
 		font-weight: 400
 		text-align: center
@@ -59,6 +64,24 @@
 			margin-bottom: 25px
 		+rm(1220)
 			font-size: 30px
+			margin-bottom: 26px
+	&__content
+		position: relative
+		&::before
+			+rm(1024)
+				content: ''
+				position: absolute
+				top: 0px
+				right: 21px
+				background: url(../img/promo-man.webp) no-repeat center / contain;
+				width: 438px
+				height: 600px
+				z-index: -1
+			+rm(1220)
+				width: 561px
+				height: 651px
+				top: -36px;
+				right: 37px;
 	&__list
 		max-width: 310px
 		margin: 0 auto 25px
@@ -94,14 +117,23 @@
 				position: absolute
 				top: -79px
 				left: 260px
+			+rm(1220)
+				top: -94px
+				left: 299px
 		&--2
 			+rm(1024)
-				top: -25px
+				top: -15px
 				left: -70px
+			+rm(1220)
+				top: -42px
+				left: -8px
 		&--3
 			+rm(1024)
-				top: 190px
-				left: -90px
+				top: 135px
+				left: -100px
+			+rm(1220)
+				top: 124px
+				left: -45px
 	&-item__icon
 		display: flex
 		justify-content: center
@@ -134,29 +166,57 @@
 			+rm(1024)
 				content: ''
 				position: absolute
-				bottom: -7px
-				left: 25px
-				width: 15px
-				height: 15px
-				background-color:#ebfaff
-				border-right: 1px solid #219ed4
-				border-bottom: 1px solid #219ed4
-				transform: scaleZ(0.5) rotate(39deg)
-				z-index: -2
+				width: 130%;
+				height: 121%;
+				top: 50%
+				left: 50%
+				transform: translate(-50%, -43%)
+				background: url(../img/promo-item-bg.png) no-repeat center / contain
+			+rm(1220)
+
 		&--small
-			font-size: 10px
+			font-size: 8px
 			font-weight: 300
 			margin-bottom: 3px
-		font-size: 18px
+			text-transform: uppercase
+			+rm(1220)
+				font-size: 11px
 		img
 			max-height: 33px
 		+rm(640)
 			margin-bottom: 10px
 			margin-right: 0
+		+rm(1024)
+			border: 0
+		+rm(1220)
+			height: 80px
+			width: 80px
+			font-size: 28px
 		&--1
 			+rm(1024)
 				margin-bottom: 0
 				margin-right: 10px
+			+rm(1220)
+				margin-right: 20px
+			&::after
+				+rm(1220)
+
+		&--2
+			+rm(1220)
+				margin-bottom: 14px
+			&::after
+				+rm(1024)
+					transform: translate(-46%,-45%) rotate(-49deg)
+				+rm(1220)
+			
+		&--3
+			+rm(1220)
+				margin-bottom: 14px
+			&::after
+				+rm(1024)
+					transform: translate(-42%,-50%) rotate(-89deg)
+				+rm(1220)
+
 	&-item__text
 		color: #222222;
 		font-weight: 700
@@ -169,6 +229,19 @@
 		&--2
 			+rm(1024)
 				text-align: right
+				max-width: 200px
+				position: relative
+				margin-right: 120px
+			+rm(1220)
+				margin-right: 128px
+		&--3
+			+rm(1024)
+				text-align: right
+				max-width: 200px
+				position: relative
+				margin-right: 60px
+			+rm(1220)
+				margin-right: 120px
 	&__pack
 		max-width: 210px
 		margin: 0 auto 15px
@@ -185,7 +258,11 @@
 			width: 100%
 			margin-left: 250px
 			z-index: 0
-			margin-bottom: 45px
+			margin-bottom: 20px
+		+rm(1220)
+			max-width: 249px
+			margin-left: 292px
+			margin-bottom: 0
 		&::before
 			+rm(1024)
 				content: ''
@@ -198,6 +275,10 @@
 				height: 400px
 				background: url(../img/pack__border.png) no-repeat center / contain
 				z-index: -1
+			+rm(1220)
+				width: 443px
+				height: 443px
+				transform: translate(-54%,-64%)
 	&__info
 		text-align: center
 		margin-bottom: 10px
@@ -207,7 +288,9 @@
 			margin-bottom: 15px
 		+rm(1024)
 			text-align: left
-			margin-bottom: 110px
+			margin-bottom: 59px
+		+rm(1220)
+			margin-bottom: 82px
 	&__prod
 		+rm(640)
 			display: flex
@@ -227,9 +310,19 @@
 	display: flex
 	justify-content: center
 	align-items: center
+	+rm(1220)
+		width: 108px
+		height: 103px
+		top: 51px
+		right: -49px
 	&__number
 		color: #222222
 		font-weight: 900
 		font-size: 25px
 		text-align: center
 		transform: rotate(-38deg)
+		+rm(1220)
+			font-size: 29px
+.no-webp
+	.promo__content::before
+		background: url(../img/promo-man.png) no-repeat center/contain;
