--- a/src/styles/components/course.sass
+++ b/src/styles/components/course.sass
@@ -97,7 +97,7 @@
         content: ''
         width: 28px
         height: 19px
-        background: url("../img/pulse.png") no-repeat center
+        background: url("../img/pulse.png") no-repeat center / contain
         position: absolute
         bottom: -22px
         left: 50%
