--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -16,8 +16,10 @@ append content
   include components/illness
   include components/course
   include components/composition
+  include components/board
+  include components/order
   include components/svg-sprites.html
+  include components/footer
 append scripts
   //- script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
-append scripts
-  script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
+  script(src="https://179523.selcdn.ru/public/layout-images/eu-footer2.js")
