--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -5,6 +5,9 @@
 @import "promo";
 @import "form";
 @import "danger";
+@import "course";
+@import "composition";
+@import "expert";
 @import "illness";
 @import "board";
 @import "order";
