--- a/src/templates/components/composition.pug
+++ b/src/templates/components/composition.pug
@@ -9,7 +9,7 @@ section.composition.block
         .composition-component
           picture
             source(type="image/webp" srcset="img/composition1.webp")
-            img.composition-component__img(src="img/composition1.jpg" alt="course")
+            img.composition-component__img(src="img/composition1.png" alt="course")
           h3.composition-component__title.text-bold Маточное 
             br.composition-component__title-br
             |молочко
@@ -17,7 +17,7 @@ section.composition.block
         .composition-component
           picture
             source(type="image/webp" srcset="img/composition2.webp")
-            img.composition-component__img(src="img/composition2.jpg" alt="course")
+            img.composition-component__img(src="img/composition2.png" alt="course")
           h3.composition-component__title.text-bold Экстракт корня гинкго&nbsp;билоба
           p.composition-component__desc Обладает свойством уменьшать частоту сердечных сокращений, повышать диурез, улучшать работу&nbsp;мозга
       li.composition-item
@@ -33,7 +33,7 @@ section.composition.block
           picture
             source(type="image/webp" media="(max-width: 479px)" srcset="img/award2__mob.webp")
             source(type="image/webp" srcset="img/award2.webp")
-            img.award(src="img/award1.png" alt="award")
+            img.award(src="img/award2.png" alt="award")
           picture
             source(type="image/webp" media="(max-width: 479px)" srcset="img/award3__mob.webp")
             source(type="image/webp" srcset="img/award3.webp")
@@ -42,13 +42,13 @@ section.composition.block
         .composition-component
           picture
             source(type="image/webp" srcset="img/composition3.webp")
-            img.composition-component__img(src="img/composition3.jpg" alt="course")
+            img.composition-component__img(src="img/composition3.png" alt="course")
           h3.composition-component__title.text-bold Экстракт цветов зверобоя обыкновенного
           p.composition-component__desc Способствует борьбе с бессонницей, улучшению тонуса сосудов
         .composition-component
           picture
             source(type="image/webp" srcset="img/composition4.webp")
-            img.composition-component__img(src="img/composition4.jpg" alt="course")
+            img.composition-component__img(src="img/composition4.png" alt="course")
           h3.composition-component__title.text-bold Экстракт цветов ивы&nbsp;белой
           p.composition-component__desc Помогает снизить вес, избавиться от головных болей и мигреней, предотвратить образование тромбов
 
