--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -16,6 +16,7 @@ append content
   include components/illness
   include components/course
   include components/composition
+  include components/expert
   include components/board
   include components/order
   include components/svg-sprites.html
