--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -6,7 +6,9 @@
 @import "form";
 @import "danger";
 @import "illness";
+@import "research";
 @import "reviews";
+@import "use";
 @import "board";
 @import "order";
 @import "footer";
