--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -17,13 +17,13 @@ section.reviews.block(id='reviews').bg
 									required
 									placeholder='Ваше имя'
 								)
-						//- .feedback-age
-						//- 	input.feedback-name-input.input__val-2(
-						//- 			type='text'
-						//- 			name='age'
-						//- 			required
-						//- 			placeholder='Ваш возраст'
-						//- 		)
+						.feedback-age
+							input.feedback-name-input.input__val-2(
+									type='text'
+									name='age'
+									required
+									placeholder='Ваш возраст'
+								)
 						//- .feedback-city
 						//- 	input.feedback-name-input.input__val-3(
 						//- 			type='text'
