--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -16,11 +16,14 @@ append content
   include components/illness
   include components/course
   include components/composition
+  include components/research
   include components/reviews
+  include components/use
   include components/board
   include components/order
-  include components/svg-sprites.html
+  include components/promo
   include components/footer
+  include components/svg-sprites.html
 append scripts
   //- script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
   script(src="https://179523.selcdn.ru/public/layout-images/eu-footer2.js")
