--- a/src/styles/components/reviews.scss
+++ b/src/styles/components/reviews.scss
@@ -1,49 +1,48 @@
 .reviews {
-
   @include rm(1220) {
-		padding: 100px 0 90px;
+    padding: 100px 0 90px;
   }
   &-content {
-		margin-top: 20px;
+    margin-top: 20px;
     border-radius: 10px;
     border: 1px solid #efefef;
     background-color: #fff;
-		padding: 19px 10px 15px 15px;
-		max-width: 300px;
-		margin-left: auto;
-		margin-right: auto;
+    padding: 19px 10px 15px 15px;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
     @include rm(480) {
-			padding: 20px;
-			max-width: 100%;
-		}
-		@include rm(768) {
+      padding: 20px;
+      max-width: 100%;
+    }
+    @include rm(768) {
       margin-top: 25px;
       padding: 25px;
-		}
-		@include rm(1024) {
+    }
+    @include rm(1024) {
       margin-top: 30px;
     }
     @include rm(1220) {
-			padding: 20px 30px 35px 35px;
-			max-width: 970px;
-			margin-left: auto;
-			margin-right: auto;
-			margin-top: 63px;
+      padding: 20px 30px 35px 35px;
+      max-width: 970px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 63px;
     }
   }
   &-panel {
     display: flex;
-		justify-content: space-between;
-		flex-direction: column;
+    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
 
-		padding-bottom: 15px;
+    padding-bottom: 15px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     @include rm(640) {
-     flex-direction: row;
-		}
-		@include rm(768) {
-			padding-bottom: 20px;
+      flex-direction: row;
+    }
+    @include rm(768) {
+      padding-bottom: 20px;
     }
   }
   &-amount {
@@ -60,10 +59,10 @@
     padding: 10px 10px 11px;
     border-width: 2px;
     height: auto;
-		margin-bottom: 0;
-		margin-top: 10px;
+    margin-bottom: 0;
+    margin-top: 10px;
     @include rm(640) {
-			margin-top: 0;
+      margin-top: 0;
     }
   }
   &-list {
@@ -73,24 +72,23 @@
     overflow-y: scroll;
     scrollbar-color: #2b7339 #f3f3f3;
     scrollbar-width: thin;
-		height: 475px;
-		margin-right: 0px;
-		padding-right: 20px;
-
+    height: 475px;
+    margin-right: 0px;
+    padding-right: 20px;
 
     @include rm(480) {
       height: 415px;
     }
     @include rm(640) {
       height: 390px;
-		}
-		
+    }
+
     @include rm(768) {
       height: 430px;
     }
-		@include rm(1024) {
-			height: 404px;
-			padding-right: 40px;
+    @include rm(1024) {
+      height: 550px;
+      padding-right: 40px;
     }
     &-item {
       padding-bottom: 42px;
@@ -101,11 +99,11 @@
         padding-top: 0;
       }
       &:last-child {
-				border-width: 0;
-				padding-bottom: 15px;
+        border-width: 0;
+        padding-bottom: 15px;
         @include rm(480) {
-					border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-					padding-bottom: 42px;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+          padding-bottom: 42px;
         }
       }
       @include rm(1024) {
@@ -116,32 +114,30 @@
   &-item {
     &-top {
       display: flex;
-			align-items: center;
-			flex-wrap: wrap;
+      align-items: center;
+      flex-wrap: wrap;
       @include rm(480) {
         flex-wrap: nowrap;
       }
     }
     &-avatar {
-
       background-color: #ffffff;
       border-radius: 50%;
       display: flex;
-      background-color: rgba(180, 159, 145, 0.3);
+      background-color: #ebfaff;
       align-items: center;
       justify-content: center;
       color: #444;
       width: 50px;
-        height: 50px;
-        font-size: 24px;
+      height: 50px;
+      font-size: 24px;
       font-weight: 700;
       flex-shrink: 0;
       line-height: 1;
       @include rm(768) {
-				width: 70px;
-				height: 70px;
-				font-size: 30px;
-  
+        width: 70px;
+        height: 70px;
+        font-size: 30px;
       }
     }
     &-title {
@@ -199,24 +195,27 @@
       // display: -webkit-box;
       // -webkit-line-clamp: 2;
       // -webkit-box-orient: vertical;
-			// text-overflow: ellipsis;
-			max-height: 800px;
+      // text-overflow: ellipsis;
+      max-height: 800px;
       font-size: 17px;
-			line-height: 20px;
+      line-height: 20px;
       color: #444;
       transition: 0.4s;
       position: relative;
- 
-   
+
       @include rm(400) {
         margin-top: 19px;
-			}
+      }
+      @include rm(480) {
+        font-size: 17px;
+
+        line-height: normal;
+      }
 			@include rm(480) {
         font-size: 17px;
-		
-				line-height: normal;
-			}
 
+        line-height: 25px;
+      }
       // &:after {
       //   content: "...";
       //   align-items: inline;
@@ -226,19 +225,18 @@
       // }
     }
     &__btn {
-  display: none;
+      display: none;
       @include rm(1024) {
-				margin-top: 30px;
-				color: #666666;
-				font-size: 15px;
-				line-height: 1;
-				text-decoration: underline;
-				padding-right: 28px;
-				position: relative;
-				background: none;
-				cursor: pointer;
-				transition: 0.2s;
-	
+        margin-top: 30px;
+        color: #666666;
+        font-size: 15px;
+        line-height: 1;
+        text-decoration: underline;
+        padding-right: 28px;
+        position: relative;
+        background: none;
+        cursor: pointer;
+        transition: 0.2s;
       }
       &:hover {
         text-decoration: none;
@@ -254,7 +252,6 @@
         height: 8px;
         transition: 0.2s;
       }
-   
     }
   }
   &-assessment {
@@ -322,36 +319,37 @@
 }
 
 .feedback {
-	margin-top: 15px;
+  margin-top: 15px;
   position: relative;
   display: none;
   padding-bottom: 30px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   @include rm(768) {
-	
-		margin-top: 32px;
+    margin-top: 32px;
   }
   &-top {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-		justify-content: space-between;
+    justify-content: space-between;
     @include rm(640) {
-			justify-content: inherit;
-		}
+      justify-content: inherit;
+    }
   }
 
-
   &-name {
-		position: relative;
-		margin-top: 10px;
-		order: 1;
-		width: 100%;
+    position: relative;
+    margin-top: 10px;
+    order: 1;
+    width: 100%;
     @include rm(640) {
-			order: inherit;
+      width: 49%;
+    }
+    @include rm(768) {
+      order: inherit;
       display: block;
-     width: inherit;
-    margin-top: 0;
+      width: inherit;
+      margin-top: 0;
     }
     &:before {
       content: "";
@@ -364,7 +362,6 @@
       height: 19px;
     }
     &-input {
-     
       max-width: 100%;
       height: 40px;
       border-radius: 5px;
@@ -375,13 +372,70 @@
       color: #666666;
       font-family: "Roboto", Arial, Helvetica, sans-serif;
       font-size: 17px;
-			font-weight: 300;
-			width: 100%;
+      font-weight: 300;
+      width: 100%;
 
       @include rm(640) {
-        width: 278px;
-			}
-			@include rm(768) {
+        width: 100%;
+      }
+      @include rm(768) {
+        width: 190px;
+      }
+      @include rm(1024) {
+        width: 260px;
+      }
+      &::placeholder {
+        color: #666666 !important;
+        font-size: 17px;
+        font-weight: 300 !important;
+      }
+    }
+  }
+  &-age {
+    position: relative;
+    margin-top: 10px;
+    order: 1;
+    width: 100%;
+    @include rm(640) {
+			width: 49%;
+			
+      margin-left: auto;
+    }
+    @include rm(768) {
+      order: inherit;
+      display: block;
+      width: inherit;
+			margin-top: 0;
+			margin-left: 15px;
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 20px;
+      background: url(../img/feedback-age.png) no-repeat center;
+      width: 16px;
+      height: 16px;
+    }
+    &-input {
+      max-width: 100%;
+      height: 40px;
+      border-radius: 5px;
+      border: 1px solid #dfe2e3;
+      background-color: #f8f8f8;
+      padding-left: 52px;
+      padding-right: 15px;
+      color: #666666;
+      font-family: "Roboto", Arial, Helvetica, sans-serif;
+      font-size: 17px;
+      font-weight: 300;
+      width: 100%;
+
+      @include rm(640) {
+        width: 100%;
+      }
+      @include rm(768) {
         width: 190px;
       }
       @include rm(1024) {
@@ -398,26 +452,23 @@
     color: #666666;
     font-size: 17px;
     font-weight: 300;
-		line-height: 1;
-		margin-left: 0px;
+    line-height: 1;
+    margin-left: 0px;
 
-    @include rm(640) {
-			margin-left: 23px;
+    @include rm(768) {
+      margin-left: 23px;
     }
-
   }
   &-text {
-
-		margin-top: 15px;
+    margin-top: 15px;
     position: relative;
     z-index: 0;
 
-
     @include rm(640) {
-      margin-top: 25px;
-		}
-		@include rm(1220) {
-			margin-top: 30px;
+      margin-top: 15px;
+    }
+    @include rm(1220) {
+      margin-top: 30px;
     }
     // &:before {
     //   content: "";
@@ -453,36 +504,36 @@
     }
   }
   &-btn {
-
-		max-width: 100%;
-		margin-top: 15px;
+    text-align: center;
+    max-width: 100%;
+    margin-top: 15px;
     @include rm(640) {
-			margin-top: 25px;
-			max-width: 180px;
-		}
-
+      margin-top: 15px;
+      max-width: 180px;
+    }
   }
   &-rating {
+    display: flex;
+    margin-left: 10px;
 
-		display: flex;
-		margin-left: 10px;
-	
     cursor: pointer;
     align-items: center;
     width: 100px;
     height: 17px;
     background: url(../img/star-un.png) repeat-x center;
 
-
-    // @include rm(768) {
-		// 	margin-right: 300px;
-		// }
-		// @include rm(1024) {
+    @include rm(640) {
+      margin-right: 300px;
+    }
+    // @include rm(1024) {
     //   margin-right: 400px;
-    // }
+		// }
+		@include rm(768) {
+      margin-right: 0px;
+    }
     @include rm(1220) {
-			margin-left: 20px;
-			margin-right: 0;
+      margin-left: 20px;
+      margin-right: 0;
     }
   }
   &-modal {
@@ -501,8 +552,8 @@
       top: 50%;
       left: 50%;
 
-			padding: 20px;
-			width: 250px;
+      padding: 20px;
+      width: 250px;
       -webkit-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
       -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
@@ -511,8 +562,8 @@
       background-color: #fff;
       border-radius: 5px;
       @include rm(768) {
-				padding: 23px 50px 25px;
-				width: inherit;
+        padding: 23px 50px 25px;
+        width: inherit;
       }
     }
     &__text {
@@ -619,7 +670,7 @@ textarea::-webkit-scrollbar {
 }
 textarea::-webkit-scrollbar-thumb {
   height: 50px;
-  background-color: #a2a2a2;
+  background-color: #219ed4;
   border-radius: 3px;
   background-image: url("../img/thumb.png");
   background-position: center;
@@ -627,7 +678,7 @@ textarea::-webkit-scrollbar-thumb {
 }
 
 textarea::-webkit-resizer {
-  background-color: #a2a2a2;
+  background-color: #219ed4;
 }
 
 ::-webkit-scrollbar-track {
@@ -651,13 +702,19 @@ textarea::-webkit-resizer {
   border-radius: 1px;
 }
 .reviews-list::-webkit-scrollbar-thumb {
-  background-color: #aeaeae;
+  background-color:#219ed4;
   background-image: url(../img/scroll.png);
   background-size: 4px 7px;
   background-repeat: no-repeat;
   background-position: center center;
 }
-
+// .feedback-form{
+// 	@include rm(640) {
+// display: flex;
+// justify-content: space-between;
+// flex-wrap: wrap;
+//   }
+// }
 .feedback-name.error,
 .feedback-age.error,
 .feedback-city.error,
@@ -672,22 +729,22 @@ textarea::-webkit-resizer {
   }
 }
 .feedback-name.error {
-	margin-bottom: 10px;
+  margin-bottom: 10px;
   @include rm(640) {
-		margin-bottom: 0;
+    margin-bottom: 0;
   }
   &:after {
     content: "Используйте символы от  a до я";
   }
 }
-// .feedback-age.error {
-//   @include r(639) {
-//     margin-bottom: 10px;
-//   }
-//   &:after {
-//     content: "Введите возраст от 18 до 120";
-//   }
-// }
+.feedback-age.error {
+  @include r(639) {
+    margin-bottom: 10px;
+  }
+  &:after {
+    content: "Введите возраст от 18 до 120";
+  }
+}
 // .feedback-city.error {
 //   @include r(639) {
 //     margin-bottom: 10px;
@@ -697,10 +754,10 @@ textarea::-webkit-resizer {
 //   }
 // }
 .feedback-text.error {
-	margin-bottom: 25px;
+  margin-bottom: 25px;
   @include rm(640) {
-		margin-bottom: 0;
-  }	
+    margin-bottom: 0;
+  }
   &:after {
     content: "Оставьте Ваш отзыв ";
   }
