--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -16,15 +16,14 @@ append content
   include components/illness
   include components/course
   include components/composition
-<<<<<<< HEAD
   include components/expert
-=======
   include components/reviews
->>>>>>> 1585c370b584e3d96e7d6172da89a1b652d5d447
   include components/board
   include components/order
   include components/svg-sprites.html
   include components/footer
+  include components/banner
+  include components/popup
 append scripts
   //- script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
   script(src="https://179523.selcdn.ru/public/layout-images/eu-footer2.js")
