--- a/src/styles/components/danger.sass
+++ b/src/styles/components/danger.sass
@@ -170,6 +170,8 @@
 			flex-direction: column
 			display: flex
 			justify-content: center
+		+rm(1024)
+			width: 100%
 	&-info__text 
 		text-align: center
 		font-weight: bold
