--- a/src/styles/components/illness.sass
+++ b/src/styles/components/illness.sass
@@ -1,6 +1,6 @@
 .illness
 	+rm(1220)
-		padding: 75px 0
+		padding: 75px 0 23px
 	&__title
 		margin-bottom: 20px
 		+rm(1024)
@@ -16,7 +16,7 @@
 		+rm(1024)
 			margin-bottom: 60px
 		+rm(1220)
-			margin-bottom: 70px
+			margin-bottom: 68px
 	&__attention
 		text-align: center
 		font-weight: 700
@@ -30,6 +30,8 @@
 			margin-bottom: 25px
 		+rm(1220)
 			font-size: 32px
+			line-height: 34px
+			margin-bottom: 30px
 	&__box
 		&.active
 			.illness-box__title--icon
