--- a/src/styles/components/promo.sass
+++ b/src/styles/components/promo.sass
@@ -325,4 +325,4 @@
 			font-size: 29px
 .no-webp
 	.promo__content::before
-		background: url(../img/promo-man.png) no-repeat center/contain;
+		background: url(../img/promo-man.png) no-repeat center / contain
