--- a/src/templates/components/promo.pug
+++ b/src/templates/components/promo.pug
@@ -20,8 +20,8 @@ section.promo.block
 						p.promo-item__text.promo-item__text--3 Улучшить тонус и эластичность сосудов
 				.promo__pack
 					picture
-						source(srcset="img/pack.webp", type="image/webp")
-						img(src="img/pack.png", alt="girl")
+						source(srcset="img/prod.webp", type="image/webp")
+						img(src="img/prod.png", alt="girl")
 					.discount
 						span.discount__number -50%
 				.form__content
