--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -1,6 +1,7 @@
 section.reviews.block(id='reviews').bg
 	.container
-		h2.title.reviews__title Отзывы людей, которым уже помог Cardiosoft
+		h2.title.reviews__title Отзывы людей, которые уже принимали 
+			span.accent Gipertolife
 		.reviews-content
 			.reviews-panel
 				.star-box
