--- a/src/styles/components/board.sass
+++ b/src/styles/components/board.sass
@@ -2,6 +2,9 @@
 	+rm(1024)
 		padding-top: 40px !important
 		padding-bottom: 0 !important
+	+rm(1220)
+		padding-top: 104px !important
+		padding-bottom: 100px !important
 	&__content
 		position: relative
 		+rm(1024)
@@ -25,12 +28,12 @@
 				width: 274px
 				height: 293px
 				left: -273px
-				bottom: 0
+				bottom: -1px
 				transform: none
 			+rm(1220)
-				width: 355px
-				height: 378px
-				left: -373px
+				width: 309px;
+				height: 416px;
+				left: -352px;
 		+rm(1220)
 			max-width: 869px
 
@@ -47,7 +50,7 @@
 			border: 0
 		+rm(1220)
 			padding-bottom: 0px
-			margin-bottom: 25px
+			margin-bottom: 30px
 	&-list__item
 		font-size: 16px
 		line-height: normal
@@ -73,7 +76,7 @@
 		+rm(1220)
 			font-size: 17px
 			line-height: 24px
-			padding-top: 62px
+			padding-top: 51px
 			margin-left: 0
 			margin-right: 0
 		a
@@ -120,6 +123,10 @@
 				padding-left: 25px
 			+rm(1220)
 				padding-left: 50px
+		&:first-child
+			&::before
+				+rm(1024)
+					left: 0
 	&__info
 		display: flex
 		flex-wrap: wrap
@@ -147,10 +154,10 @@
 			margin-right: 42px
 			position: relative
 		+rm(1220)
-			font-size: 20px
+			font-size: 22px
 			line-height: normal
 			max-width: 29%
-			padding-top: 33px
+			padding-top: 28px
 		&::before
 			+rm(1024)
 				content: ''
@@ -166,11 +173,11 @@
 			font-size: 16px
 			font-weight: 400
 			line-height: normal
-			font-style: italic
 			display: block
 			margin-top: 3px
 			+rm(1220)
-				margin-top: 14px
+				margin-top: 5px
+				font-size: 18px
 	&-list__item1
 		+rm(1220)
 			max-width: 250px
