--- a/src/styles/components/expert.sass
+++ b/src/styles/components/expert.sass
@@ -1,4 +1,7 @@
 .expert
+  +rm(1220)
+    padding-top: 17px
+    padding-bottom: 26px
   & .container
     +rm(1024)
       position: relative
@@ -33,10 +36,17 @@
     flex-direction: column
     margin: 0 20px
     position: relative
+    margin-bottom: 15px
+    background-color: #ebfaff
     +rm(768)
       margin: 0 10px
+      margin-bottom: 30px
     +rm(1024)
       margin: 0
+      margin-bottom: 40px
+      background: url(../img/bg.png) no-repeat center #ebfaff;
+    +rm(1220)
+      margin-bottom: 58px
     &::before, &::after
       content: ''
       width: 60px
