--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -7,6 +7,7 @@
 @import "danger";
 @import "course";
 @import "composition";
+@import "action";
 @import "expert";
 @import "illness";
 @import "research";
