--- a/src/styles/components/order.sass
+++ b/src/styles/components/order.sass
@@ -1,13 +1,22 @@
 .order
 	position: relative
 	+rm(1220)
-		padding: 100px 0 109px
+		padding: 20px 0 135px
+	&::before
+		+rm(1220)
+			content: ''
+			position: absolute
+			bottom: -11px
+			left: 0
+			width: 100%
+			height: 97px
+			background: url(../img/line-top.png) repeat center #ebfaff;
 	&__title
 		margin-bottom: 25px
 		+rm(768)
 			margin-bottom: 35px
 		+rm(1220)
-			margin-bottom: 72px
+			margin-bottom: 64px
 	&__list
 		+rm(640)
 			display: flex
@@ -98,7 +107,8 @@
 			font-size: 16px
 			line-height: 1.2
 		+rm(1220)
-			font-size: 17px
+			font-size: 18px
+			line-height: 24px
 		br
 			display: none
 			+rm(1024)
