--- a/src/styles/components/research.sass
+++ b/src/styles/components/research.sass
@@ -1,10 +1,11 @@
 .research
+	+rm(1220)
+		padding-top: 131px
+		padding-bottom: 162px
 	&__title
 		margin-bottom: 15px
 		+rm(1024)
-			margin-bottom: 25px
-		+rm(1220)
-			margin-bottom: 25px
+			margin-bottom: 19px
 	&__subtitle
 		text-align: center
 		font-size: 20px
@@ -14,8 +15,10 @@
 			font-size: 22px
 		+rm(1024)
 			margin-bottom: 25px
+			font-size: 26px
 		+rm(1220)
 			margin-bottom: 34px
+			font-size: 28px
 	&__stat
 		position: relative
 	&__content
@@ -23,6 +26,8 @@
 		+rm(640)
 			display: flex
 			flex-wrap: wrap
+		+rm(1220)
+			margin-bottom: 47px
 	&__box
 		display: flex
 		flex-direction: column
@@ -40,6 +45,8 @@
 			margin: 0
 			width: 33.33%
 			position: relative
+		+rm(1220)
+			left: -10px
 		&:not(:last-child)
 			padding-bottom: 15px
 			border-bottom: 1px solid#d5d5d5
@@ -63,7 +70,8 @@
 			+rm(1024)
 				padding-top: 0
 				padding-left: 5px
-			
+			+rm(1220)
+				padding-left: 25px
 	&__text
 		text-align: center
 		font-size: 18px
@@ -76,6 +84,8 @@
 			font-size: 18px
 		+rm(1024)
 			margin-left: 5px
+		+rm(1220)
+			margin-left: 15px !important
 	&-stat__number 
 		position: absolute
 		left: 50%
@@ -197,6 +207,8 @@
 			+rm(1024)
 				border: 0
 				position: relative
+			+rm(1220)
+				padding-bottom: 31px
 			&::before
 				+rm(1024)
 					content: ''
@@ -210,6 +222,8 @@
 			padding-top: 10px
 			+rm(640)
 				padding-top: 15px
+			+rm(1220)
+				padding-top: 19px
 	&-item__text
 		text-align: center
 		font-weight: 500;
@@ -223,9 +237,11 @@
 			font-size: 20px
 		+rm(1024)
 			width: 33%
+			margin-bottom: 0
 		+rm(1220)
 			font-size: 22px
 			line-height: 28px
+			margin-bottom: 0
 	&-item__info
 		text-align: center
 		background-color: #e8e2de
@@ -242,7 +258,7 @@
 			align-items: center
 			padding-left: 20px
 		+rm(1024)
-			width: 64.5%
+			width: 65.5%
 			font-size: 26px
 		+rm(1220)
 			font-size: 30px
