--- a/src/styles/components/timer.scss
+++ b/src/styles/components/timer.scss
@@ -31,7 +31,7 @@
     
     .timer__dots {
         margin: 0 2.5px 1px;
-				color: #ffffff;
+				color: #222;
         opacity: 0.6;
         font-size: 19px;
         font-weight: 400;
