--- a/src/templates/components/composition.pug
+++ b/src/templates/components/composition.pug
@@ -1,54 +1,82 @@
 section.composition.block
-  .container
-    h2.composition__title.title Секрет эффективности 
-      span.accent
-        |Gipertolife 
-      |—&nbsp;его&nbsp;природный состав
-    ul.composition-list
-      li.composition-item
-        .composition-component
-          picture
-            source(type="image/webp" srcset="img/composition1.webp")
-            img.composition-component__img(src="img/composition1.png" alt="course")
-          h3.composition-component__title.text-bold Маточное 
-            br.composition-component__title-br
-            |молочко
-          p.composition-component__desc Помогает расширить кровеносные сосуды, корректировать артериальное&nbsp;давление
-        .composition-component
-          picture
-            source(type="image/webp" srcset="img/composition2.webp")
-            img.composition-component__img(src="img/composition2.png" alt="course")
-          h3.composition-component__title.text-bold Экстракт корня гинкго&nbsp;билоба
-          p.composition-component__desc Обладает свойством уменьшать частоту сердечных сокращений, повышать диурез, улучшать работу&nbsp;мозга
-      li.composition-item
-        picture
-          source(type="image/webp"  media="(min-width: 480px)" srcset="img/prod.webp")
-          source(type="image/webp" srcset="img/prod__mob.webp")
-          img.composition__prod(src="img/prod.png" alt="product")
-        .composition__prod-awards
-          picture
-            source(type="image/webp" media="(max-width: 479px)" srcset="img/award1__mob.webp")
-            source(type="image/webp" srcset="img/award1.webp")
-            img.award(src="img/award1.png" alt="award")
-          picture
-            source(type="image/webp" media="(max-width: 479px)" srcset="img/award2__mob.webp")
-            source(type="image/webp" srcset="img/award2.webp")
-            img.award(src="img/award2.png" alt="award")
-          picture
-            source(type="image/webp" media="(max-width: 479px)" srcset="img/award3__mob.webp")
-            source(type="image/webp" srcset="img/award3.webp")
-            img.award(src="img/award3.png" alt="award")
-      li.composition-item
-        .composition-component
-          picture
-            source(type="image/webp" srcset="img/composition3.webp")
-            img.composition-component__img(src="img/composition3.png" alt="course")
-          h3.composition-component__title.text-bold Экстракт цветов зверобоя обыкновенного
-          p.composition-component__desc Способствует борьбе с бессонницей, улучшению тонуса сосудов
-        .composition-component
-          picture
-            source(type="image/webp" srcset="img/composition4.webp")
-            img.composition-component__img(src="img/composition4.png" alt="course")
-          h3.composition-component__title.text-bold Экстракт цветов ивы&nbsp;белой
-          p.composition-component__desc Помогает снизить вес, избавиться от головных болей и мигреней, предотвратить образование тромбов
-
+	.container
+		h2.composition__title.title Секрет эффективности 
+			span.accent
+				|Gipertolife 
+			|—&nbsp;его&nbsp;природный состав
+		ul.composition-list
+			li.composition-item
+				.composition-component
+					picture
+						source(type="image/webp" srcset="img/composition1.webp")
+						img.composition-component__img(src="img/composition1.png" alt="course")
+					h3.composition-component__title.text-bold Маточное 
+						br.composition-component__title-br
+						|молочко
+					p.composition-component__desc Помогает расширить кровеносные сосуды, корректировать артериальное&nbsp;давление
+				.composition-component
+					picture
+						source(type="image/webp" srcset="img/composition2.webp")
+						img.composition-component__img(src="img/composition2.png" alt="course")
+					h3.composition-component__title.text-bold Экстракт корня гинкго&nbsp;билоба
+					p.composition-component__desc Обладает свойством уменьшать частоту сердечных сокращений, повышать диурез, улучшать работу&nbsp;мозга
+			li.composition-item
+				picture
+					source(type="image/webp"  media="(min-width: 480px)" srcset="img/prod.webp")
+					source(type="image/webp" srcset="img/prod__mob.webp")
+					img.composition__prod(src="img/prod.png" alt="product")
+				.composition__prod-awards
+					picture
+						source(type="image/webp" media="(max-width: 479px)" srcset="img/award1__mob.webp")
+						source(type="image/webp" srcset="img/award1.webp")
+						img.award(src="img/award1.png" alt="award")
+					picture
+						source(type="image/webp" media="(max-width: 479px)" srcset="img/award2__mob.webp")
+						source(type="image/webp" srcset="img/award2.webp")
+						img.award(src="img/award2.png" alt="award")
+					picture
+						source(type="image/webp" media="(max-width: 479px)" srcset="img/award3__mob.webp")
+						source(type="image/webp" srcset="img/award3.webp")
+						img.award(src="img/award3.png" alt="award")
+			li.composition-item
+				.composition-component
+					picture
+						source(type="image/webp" srcset="img/composition3.webp")
+						img.composition-component__img(src="img/composition3.png" alt="course")
+					h3.composition-component__title.text-bold Экстракт цветов зверобоя обыкновенного
+					p.composition-component__desc Способствует борьбе с бессонницей, улучшению тонуса сосудов
+				.composition-component
+					picture
+						source(type="image/webp" srcset="img/composition4.webp")
+						img.composition-component__img(src="img/composition4.png" alt="course")
+					h3.composition-component__title.text-bold Экстракт цветов ивы&nbsp;белой
+					p.composition-component__desc Помогает снизить вес, избавиться от головных болей и мигреней, предотвратить образование тромбов
+		.composition__action.action
+			.action__box
+				.action__title Только сегодня 22 октября
+				.discount.action__discount
+							span.discount__number -50%
+			.form__price.action__price
+				.form__price-val
+					h5.form__price-title Старая цена
+					p.form__price-before
+						span.x_currency.form__price-before_size руб
+						span.x_price_previous.form__price-before_line 1980111
+				.form_before
+				.form__price-val
+					h5.form__price-title.form__price-title--new Новая цена
+					p.form__price-after
+						span.x_currency.form__price-after_size руб
+						span.x_price_current 990111
+			.action__timer
+				include timer
+			form(action="/submit", method="POST", class="x_order_form action__form")
+				label.form__input--wrap
+					span.form__input--icon
+						img(src="img/icon_name.png", alt="")
+					input.form__input(placeholder="Мое имя", type="text",  name="name")
+				label.form__input--wrap
+					span.form__input--icon
+						img(src="img/icon_phone.png", alt="")
+					input.form__input(placeholder="Мой телефон", type="tel",  name="phone")
+				button.btn.form__btn Заказать со скидкой
