--- a/src/templates/components/expert.pug
+++ b/src/templates/components/expert.pug
@@ -1,32 +1,65 @@
 section.expert.block
-  .container
-    h2.expert__title.title Специалисты рекомендуют 
-      span.accent
-        | Gipertolife 
-    .expert-content.bg
-      .expert-content-wrap
-        .expert-text
-          p.expert-text__desc Я помогаю людям с гипертонией уже много лет. По&nbsp;статистике, примерно 
-            b
-              |40% людей умирают 
-            |в&nbsp;течение года после инсульта и инфаркта. 
-            b
-              |80%&nbsp;—&nbsp;остаются недееспособными. 
-            |Вот, почему так важно вовремя начать терапию.
-          p.expert-text__desc Проблема многих средств в том, что они 
-            b
-              |сбивают давление, но никак не влияют на причину гипертонии. 
-            |Поэтому артериальное давление поднимается снова и&nbsp;снова.
-          p.expert-text__desc Другое дело — Gipertolife. Он 
-            b
-              |воздействует на причину проблемы
-            |, благодаря чему появляется возможность надолго вернуть хорошее самочувствие. Жидкая форма выпуска позволяет ускорить усваиваемость, а&nbsp;природный состав защищает от привыкания.
-          p.expert-text__desc Специалисты рекомендуют средство Gipertolife для терапии гипертонии на любой стадии патологии.
-        //- picture
-        //-   source(type="image/webp"  media="(min-width: 480px)" srcset="img/expert.webp")
-        //-   //- source(type="image/webp" srcset="img/expert__mob.webp")
-        //-   img.expert__man(src="img/expert.png" alt="expert")
-        .expert__bio
-          b.expert__bio-name Пак Чо,
-          p.expert__bio-prof эксперт по гипертонии
-      .expert--border
+	.container
+		h2.expert__title.title Специалисты рекомендуют 
+			span.accent
+				| Gipertolife 
+		.expert-content
+			.expert-content-wrap
+				.expert-text
+					p.expert-text__desc Я помогаю людям с гипертонией уже много лет. По&nbsp;статистике, примерно 
+						b
+							|40% людей умирают 
+						|в&nbsp;течение года после инсульта и инфаркта. 
+						b
+							|80%&nbsp;—&nbsp;остаются недееспособными. 
+						|Вот, почему так важно вовремя начать терапию.
+					p.expert-text__desc Проблема многих средств в том, что они 
+						b
+							|сбивают давление, но никак не влияют на причину гипертонии. 
+						|Поэтому артериальное давление поднимается снова и&nbsp;снова.
+					p.expert-text__desc Другое дело — Gipertolife. Он 
+						b
+							|воздействует на причину проблемы
+						|, благодаря чему появляется возможность надолго вернуть хорошее самочувствие. Жидкая форма выпуска позволяет ускорить усваиваемость, а&nbsp;природный состав защищает от привыкания.
+					p.expert-text__desc Специалисты рекомендуют средство Gipertolife для терапии гипертонии на любой стадии патологии.
+				//- picture
+				//-   source(type="image/webp"  media="(min-width: 480px)" srcset="img/expert.webp")
+				//-   //- source(type="image/webp" srcset="img/expert__mob.webp")
+				//-   img.expert__man(src="img/expert.png" alt="expert")
+				.expert__bio
+					b.expert__bio-name Пак Чо,
+					p.expert__bio-prof эксперт по гипертонии
+			.expert--border
+		.expert__action.action
+			.action__box
+				.action__title Только сегодня 22 октября
+				.discount.action__discount
+							span.discount__number -50%
+			.form__price.action__price
+				.form__price-val
+					h5.form__price-title Старая цена
+					p.form__price-before
+						span.x_currency.form__price-before_size руб
+						span.x_price_previous.form__price-before_line 1980111
+				.form_before
+				.form__price-val
+					h5.form__price-title.form__price-title--new Новая цена
+					p.form__price-after
+						span.x_currency.form__price-after_size руб
+						span.x_price_current 990111
+			.action__pack
+				picture
+					source(srcset="img/prod.webp", type="image/webp")
+					img(src="img/prod.png", alt="girl")
+			.action__timer
+				include timer
+			form(action="/submit", method="POST", class="x_order_form action__form")
+				label.form__input--wrap
+					span.form__input--icon
+						img(src="img/icon_name.png", alt="")
+					input.form__input(placeholder="Мое имя", type="text",  name="name")
+				label.form__input--wrap
+					span.form__input--icon
+						img(src="img/icon_phone.png", alt="")
+					input.form__input(placeholder="Мой телефон", type="tel",  name="phone")
+				button.btn.form__btn Заказать со скидкой
