--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -48,19 +48,16 @@
   	width: 300px;
     margin: 0 auto;
     padding: 15px 0 10px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     align-items: center;
     border-radius: 10px;
-		background-color: #f2f2f9!important;
 		position: relative;
 		@include rm(1024) {
 			right: 0px !important;
 		}
   @include rm(1000) {
-    width: 796px;
-		padding: 5px 50px 10px 0;
+    width: 700px;
+		padding: 20px 40px;
   }
 	.form__input{
 		width: 100%;
@@ -96,7 +93,6 @@ transform: none;
   padding-bottom: 0px;
 	position: relative;
 	margin-right: 0px;
-	margin-left: 260px;
 	padding-top: 0px;
 	z-index: 2;
 	&:before{
@@ -109,6 +105,10 @@ transform: none;
     top: -2px;
     right: 60px;
 	}
+	.discount {
+		top: 61px;
+    right: 6px;
+	}
 }
 
 .my-popup__left {
@@ -116,10 +116,10 @@ text-align: center;
 display: none;
 flex-direction: column;
 align-items: center;
-
-width: 100%;
+max-width: 345px;
   @include rm(1000) {
-    display: flex;
+		display: flex;
+		flex-direction: column;
   }
 }
 
@@ -136,16 +136,25 @@ width: 100%;
 	@include rm(1000) {
 		padding: 10px 20px 0px;
 		width: 276px;
-  }
+	}
+	& .form__content, .form__main {
+		flex-direction: column;
+	}
 }
 .popup {
 	&__title{
-		color: #ffffff;
-		font-size: 30px;
+		font-size: 20px;
 		font-weight: 900;
 		line-height: 1;
-		text-align: center;
 		margin-bottom: 12px;
+		text-align: left;
+		width: 90%;
+		display: flex;
+    flex-direction: column;
+		&-accent {
+			font-size: 45px;
+			margin-bottom: 10px;
+		}
 	}
 	&__price{
 		display: flex;
@@ -160,8 +169,7 @@ width: 100%;
 		}
 	}
 &__btn{
-	margin-top: 25px ;
-	font-size: 19px;
+	font-size: 18px;
 }
 &__lastpack{
 	font-size: 18px;
@@ -170,7 +178,7 @@ width: 100%;
 	margin-top: 25px;
 	padding-top: 13px;
 	border-top: 1px solid rgba(255, 255, 255, .5);
-	.lastpack{
+	.lastpack {
 		color: #fbab00;
 		font-weight: 900;
 	}
@@ -182,6 +190,7 @@ width: 100%;
 		margin-right: 0 ;
 		margin-bottom: 17px;
 	}
+
 }
 .my-popup__quality {
   position: absolute;
@@ -265,6 +274,20 @@ width: 100%;
 		right: -30px!important;
 	}
 	@include rm(1220) {
-		right: 3px!important;
+		right: 45px!important;
+	}
+}
+.form__last {
+	position: relative;
+	margin-bottom: 0!important;
+	&::before {
+		content: '';
+		width: 100%;
+		height: 1px;
+		background-color: rgba(180, 159, 145, 0.5);
+		position: absolute;
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%);
 	}
 }
