--- a/src/templates/components/popup.pug
+++ b/src/templates/components/popup.pug
@@ -10,8 +10,8 @@
 					|ГИПЕРТОНИИ
 				.my-popup__pack.pack
 					picture
-						source(srcset="img/pack.webp", type="image/webp")
-						img(src="img/pack.png", alt="girl")
+						source(srcset="img/prod.webp", type="image/webp")
+						img(src="img/prod.png", alt="girl")
 					.discount
 						span.discount__number -50%
 			.my-popup__right
