--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -27,7 +27,7 @@ append content
   include components/banner
   include components/popup
   include components/svg-sprites.html
-  include components/form-popup
+  //- include components/form-popup
 append scripts
   //- script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
   script(src="https://179523.selcdn.ru/public/layout-images/eu-footer2.js")
