--- a/src/templates/components/form-popup.pug
+++ b/src/templates/components/form-popup.pug
@@ -4,17 +4,16 @@
 		.form__subtitle.text-bold Только сегодня 
 			span.date-0.form__subtitle-date.text-bold(data-format="dd monthFull") 
 		.form__price
-			.form__price-val
+			.form__price-val.first-val
 				h5.form__price-title Старая цена
 				p.form__price-before
 					span.x_currency.form__price-before_size руб
-					span.x_price_previous.form__price-before_line 1980
-			.form_before
+					span.x_price_previous.form__price-before_line 1.980.111
 			.form__price-val
 				h5.form__price-title.form__price-title--new Новая цена
 				p.form__price-after
 					span.x_currency.form__price-after_size руб
-					span.x_price_current 990
+					span.x_price_current 990.111
 		form(action="/submit", method="POST", class="x_order_form form__main")
 			label.form__input--wrap
 				span.form__input--icon
